# rustycore

./: .gitignore  Cargo.toml  LICENSE  MIGRATION_STATUS.md  README.md
.github/DISCUSSION_TEMPLATE/: development.md  general.md  ideas.md  q-a.md  show-and-tell.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  sql_fix.yml
crates/bnet-server/: Cargo.toml
crates/world-server/: Cargo.toml
crates/wow-achievement/: Cargo.toml
crates/wow-ai/: Cargo.toml
crates/wow-chat/: Cargo.toml
crates/wow-collections/: Cargo.toml
crates/wow-combat/: Cargo.toml
crates/wow-config/: Cargo.toml
crates/wow-config/src/: lib.rs
crates/wow-constants/: Cargo.toml
crates/wow-constants/src/: creature.rs  item.rs  lib.rs  movement.rs  object.rs  opcodes.rs  shared.rs  spell.rs  unit.rs  update.rs
crates/wow-core/: Cargo.toml
crates/wow-crypto/: Cargo.toml
crates/wow-database/: Cargo.toml
crates/wow-database/src/: database.rs  error.rs  lib.rs  params.rs  result.rs  transaction.rs  updater.rs
crates/wow-database/src/statements/: character.rs  hotfix.rs  login.rs  mod.rs  world.rs
crates/wow-proto/: Cargo.toml  build.rs
crates/wow-proto/proto/bgs/low/pb/client/: account_service.proto  account_types.proto  attribute_types.proto  authentication_service.proto  challenge_service.proto  connection_service.proto  content_handle_types.proto  entity_types.proto  game_utilities_service.proto  rpc_types.proto  semantic_version.proto
crates/wow-proto/src/: lib.rs
docs/: NPC_VENDOR_FLOW.md  implementation-template.md  phase4-analysis-and-fixes.md  world-entry-implementation.md
(+109 files in other folders)
