[package]
name = "wow-constants"
description = "All WoW enums, opcodes, flags (bitflags)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitflags = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
