[package]
name = "wow-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
